--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-kubernetes==9.0.1
-jupyterhub==1.0.0
-#jupyterhub-kubespawner==0.10.1
-git+https://github.com/jupyterhub/kubespawner.git@a945ef01410867b39e0c174d362a8702bbaa15e9#egg=jupyterhub-kubespawner
-git+https://github.com/jupyterhub/wrapspawner.git@5f2b7075f77d0c1c49066682a8e8adad0dab76db
+kubernetes==11.0.0
+jupyterhub==1.1.0
+jupyterhub-kubespawner==0.11.1
+#git+https://github.com/jupyterhub/kubespawner.git@a945ef01410867b39e0c174d362a8702bbaa15e9#egg=jupyterhub-kubespawner
+git+https://github.com/jupyterhub/wrapspawner.git@94b779af3926a90be922356bb9ab18153b918733
 jupyterhub-tmpauthenticator==0.6
-oauthenticator==0.9.0
-jupyterhub-ldapauthenticator==1.2.2
+oauthenticator==0.11.0
+jupyterhub-ldapauthenticator==1.3.0
 psycopg2==2.8.4
-openshift==0.10.0
+openshift==0.11.2
 wrapt==1.11.2
